@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Removed pyamf.util.make_classic_instance (as it is not used) (Ticket:521)
  - Removed pyamf.util.get_mro, in favour of inspect.getmro (Ticket:526)
  - Removed pyamf.util.Indexed[Collection|Map].remove (Ticket:518)
 
